# asset-harvester

./: CONTRIBUTING.MD  README.md  pyproject.toml  run.sh  setup.sh
asset_harvester/utils/: collect_sim_assets.py  orient_gaussians_for_nurec.py  postprocess_clip_confidence.py  rescale_gaussians.py
benchmark/: README.md  embedding_metrics.py  eval.py  install.sh  utils.py
docs/: AV_Object_Mask2former.md  MultiviewDiffusion.md  Object_TokenGS.md  asset_harvester_developer_guide.md  end_to_end_example.md  tokengs.md
scripts/: batch_ncore_parser.sh  batch_rescale_gaussians.sh  batch_run.sh  collect_sim_assets.sh  run_ncore_parser.sh
